test nav on mobile bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -372,7 +372,6 @@ ul{
 
 /*navbar icon*/
 #nav-icon {
-  border: 2px solid red;
   right: 15px;
   width: 60px;
   height: 45px;
